--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"dev": "nodemon --exec babel-node src/index.js"
+		"start": "babel-node src",
+		"dev": "nodemon --exec babel-node src"
 	},
 	"dependencies": {
 		"babel-cli": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"mongoose": "^5.7.3"
 	},
 	"devDependencies": {
 		"nodemon": "^1.19.3"
